Fixed issue with hero height and scrolldown on mobile. Height now set using JS

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -18,10 +18,12 @@
 
 .her-Hero_Inner {
   @include Inner;
+  height: 100%;
+  display: flex;
 }
 
 .her-Hero_Body {
-  height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
